--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-requests==2.28.1
+aiohttp==3.8.1
 beautifulsoup4==4.11.1
-html5lib==1.1
-responses==0.21.0
-yapf==0.32.0
-environs==9.5.0
 Deprecated==1.2.13
+environs==9.5.0
+html5lib==1.1
+Morfessor==2.0.6
 numpy==1.23.0
 # Language processing
 polyglot==16.7.4
-PyICU==2.9
 pycld2==0.41
-Morfessor==2.0.6
+PyICU==2.9
+requests==2.28.1
+responses==0.21.0
+yapf==0.32.0
