--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
       - id: check-yaml
       - id: check-json
       - id: pretty-format-json
+        args: [ --no-ensure-ascii, --autofix ]
       - id: check-added-large-files
       - id: debug-statements
       - id: requirements-txt-fixer
