chore: add changelog

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [metadata]
 name = filemapper
 author = Iago Santos
-version = 0.1.0
 license = MIT
 license_file = LICENSE
 platforms = unix, linux
@@ -32,4 +31,4 @@ python_requires = >=3.7
 zip_safe = no
 
 [options.package_data]
-slapping = py.typed
+filemapper = py.typed
